# ProiectTestare

./: .gitignore  README.md  do_build_all.sh  do_deploy_all.sh  readme.md
ProjectA/: CMakeLists.txt  Exe_Ex.cpp  do_build.sh  nohup.out
ProjectA/component_a/: CMakeLists.txt
ProjectA/component_a/inc/: ex.hpp
ProjectA/component_a/src/: CMakeLists.txt  ex.cpp
ProjectB/: CMakeLists.txt  Exe_ExB.cpp  do_build.sh
ProjectB/component_b/: CMakeLists.txt
ProjectB/component_b/inc/: exB.hpp
ProjectB/component_b/src/: CMakeLists.txt  exB.cpp
